--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "files": [
     "index.js",
-    "cli.js"
+    "cli.js",
+    "typos.json"
   ],
   "keywords": [
     "get-pkg-repo",
