refactor(typos): move into source code
Move the `typos.json` list into the JavaScript source code
so that consumers of this package aren't forced to process the JSON
file when using bundlers.

This also simplifies the package just a little, and helps move us
towards removing typo support at a future date.

BREAKING CHANGE:

`typos.json` has been removed.

Any direct consumption of the JSON file will will be impossible.

Fixes #14

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "license": "MIT",
   "files": [
     "index.js",
-    "cli.js",
-    "typos.json"
+    "cli.js"
   ],
   "keywords": [
     "get-pkg-repo",
