chore(renovate): replace preset with valid configuration

--- a/package.json
+++ b/package.json
@@ -20,6 +20,16 @@
   "license": "MIT",
   "main": "src/index.js",
   "name": "get-pkg-repo",
+  "renovate": {
+    "extends": [
+      "config:base",
+      ":maintainLockFilesWeekly",
+      ":rebaseStalePrs",
+      ":automergeDigest",
+      ":gitSignOff",
+      ":preserveSemverRanges"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/conventional-changelog/get-pkg-repo.git"
