--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,18 +1,18 @@
 on:
    push:
      branches:
-       - master
+       - 16.x.x
 name: release-please
 jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: bcoe/release-please-action@v2
+      - uses: google-github-actions/release-please-action@v2
         id: release
         with:
+          command: manifest
           token: ${{ secrets.GITHUB_TOKEN }}
-          release-type: node
-          package-name: get-pkg-repo
+          default-branch: 4.x
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
@@ -25,7 +25,7 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
       - run: npm install
         if: ${{ steps.release.outputs.release_created }}
-      - run: npm publish
+      - run: npm publish --tag=latest-4
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         if: ${{ steps.release.outputs.release_created }}
